Fixed over flow mistake on mobile size footer

--- a/themes/aurel-theme/sass/_widgets.scss
+++ b/themes/aurel-theme/sass/_widgets.scss
@@ -130,7 +130,7 @@ $widget_width: 180px;
     position: relative;
     top: 0px;
     z-index: 3;
-    width: 100vw;
+    width: 100%;
     border-left: none;
     border-right: none;
     border-top: none;
